--- a/E_Commerce_Project/Views/_ViewImports.cshtml
+++ b/E_Commerce_Project/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using E_Commerce_Project
 @using E_Commerce_Project.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IHttpContextAccessor HttpContextAccessor
+@using Microsoft.AspNetCore.Http;
